--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,14 @@ body {
   color: var(--main-color)
 }
 
+.container {
+  max-width: 75rem;
+}
+
+.search__output {
+  padding: 1rem;
+}
+
 /*
 @media (prefers-color-scheme: light) {
   :root {
