--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 :root {
   --main-color: #414141;
+  --hover-color: #e9e9e9;
+  --white-color: #ffffff;
+  --border-color: grey;
 
   font-family: Inter, system-ui, Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -15,6 +18,16 @@ body {
   margin: 0;
 }
 
+::placeholder {
+  color: var(--placeholder-color, gray);
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .wrap-form {
   display: flex;
   flex-direction: column;
@@ -25,6 +38,15 @@ body {
 
 .container {
   max-width: 75rem;
+}
+
+.total-count {
+  font-size: larger;
+  margin-bottom: 1rem;
+}
+
+.search__output-wrapper {
+  margin: 0 auto;
 }
 
 .search__output {
@@ -39,22 +61,33 @@ body {
   margin-right: 1rem;
 }
 
-.search__lang {
+.search__lang, .search__date{
   background-color: var(--main-color);
-  color: white;
+  color: var(--white-color);
   padding: 0.1rem 0.7rem;
   border-radius: 1rem;
   font-weight: 700;
 }
 
-.search__date::after {
-  content: "";
-  width: 1rem;
-  height: 1rem;
-  background-color: var(--main-color);
-  margin-left: 1rem;
-  padding: 0 0.5rem;
-  transform:  rotateX(30deg)
+table {
+  border-collapse: collapse;
+  border: 2px solid var(--border-color);
+  width: 100%;
+}
+
+th, td {
+  padding: 10px 15px;
+  border: 1px solid var(--border-color);
+}
+
+th {
+  border-bottom: 2px solid var(--border-color);
+  background-color: var(--hover-color);
+
+}
+
+tr:hover td {
+  background: var(--hover-color);
 }
 
 /*
